同步更改